# peaR

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  osv-scanner.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  homebrew.yml  osv-scanner.yml  release.yml  scorecard.yml  security.yml
.secrets-local/: pear-updater.key  pear-updater.key.pub
apps/desktop/: eslint.config.js  index.html  map.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: asciimap.ts  diff.ts  journey.ts  main.ts  map.ts  markdown.ts  protocol.ts  prsort.ts  reviewmap.ts  styles.css  update.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
crates/pear-core/: Cargo.toml
crates/pear-core/src/: brain.rs  dispatch.rs  engine.rs  error.rs  github.rs  insight.rs  lib.rs  macproc.rs  protocol.rs  review_doc.rs  session.rs  shellenv.rs  skills_install.rs  store.rs  summary.rs  tts.rs  workdir.rs
crates/pear-core/tests/: pty_smoke.rs
docs/: ARCHITECTURE.md  PEARVIEW.md  ROADMAP.md  auto-update.md
docs/design-mocks/: 1-instrument.html  2-phosphor.html  3-blueprint.html  4-editorial.html  hero.html
docs/design-snapshots/phase1-v1/: SNAPSHOT.md  index.html  main.ts  protocol.ts  styles.css
docs/memory/: MEMORY.md  session_2026-06-03.md
packaging/homebrew/: README.md  peaR.rb  pear.rb
plugins/pear-review/: README.md
plugins/pear-review/.claude-plugin/: plugin.json
plugins/pear-review/.codex-plugin/: plugin.json
plugins/pear-review/skills/pr-copy/: SKILL.md
plugins/pear-review/skills/pr-coreview/: SKILL.md
scripts/: check.sh
scripts/hooks/: pre-push
skills/commands/: pr-copy.md  pr-distill.md  pr-explain.md  pr-post-review.md  pr-video.md  pr-walkthru.md
(+6 files in other folders)
