[workspace]
resolver = "2"
members = [
    "crates/pear-core",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.12"
edition = "2021"
license = "MIT"
authors = ["pear"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
tracing = "0.1"
