[package]
name = "pear-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "In-process core for the pear PR control center: tabs, PTY sessions, GitHub, review storage, slash dispatch."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
portable-pty = "0.9"
directories = "6"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "3", features = ["json"] }
time = { version = "0.3", features = ["formatting", "macros"] }

# macOS cwd read for persist-session (proc_pidinfo). Already resolved transitively, so
# this adds no new download; scoped to Apple targets where the syscall exists.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
